# Convertly

./: .gitignore  README.md  docker-compose.yml  pyrightconfig.json
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/queue/: __init__.py  redis_client.py
backend/app/services/: __init__.py  file_manager.py  virus_scanner.py
backend/app/workers/: __init__.py  main.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/convert/[pair]/: page.tsx
frontend/src/app/privacy/: page.tsx
frontend/src/app/terms/: page.tsx
frontend/src/app/tools/: page.tsx
frontend/src/app/tools/[category]/: page.tsx
frontend/src/components/layout/: Footer.tsx  Navbar.tsx
frontend/src/components/ui/: CustomCursor.tsx  SkeletonCard.tsx
frontend/src/components/upload/: ConversionProgress.tsx  ConverterWidget.tsx  DownloadCard.tsx  Dropzone.tsx  ToolOptions.tsx
frontend/src/lib/: allTools.ts  converters.ts  formats.ts  sound.ts
scratch/: draw_icon.py  rebrand.py
