[project]
name = "convertly-backend"
version = "0.1.0"
description = "FastAPI backend for Convertly with async Redis task queue"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "redis>=5.0.0",
    "arq>=0.26.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-multipart>=0.0.12",
    "aiofiles>=24.1.0",
    "httpx>=0.27.0",
    "pillow>=10.4.0",
    "pypdfium2>=4.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pyright]
include = ["app"]
venvPath = "."
venv = ".venv"
reportMissingImports = "none"
reportMissingModuleSource = "none"

